Fix the compile-time warnings of the copyFields method